We hebben verder gewerkt aan de game

--- a/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -111,8 +111,9 @@
     <Compile Include="GameScenes\GameOverScene\GameOverScene.cs" />
     <Compile Include="GameScenes\HelpScene\HelpScene.cs" />
     <Compile Include="GameScenes\PlayScene\PlayScene.cs" />
-    <Compile Include="Input\Input.cs" />
+    <Compile Include="GameScenes\StartScene\Input\Input.cs" />
     <Compile Include="Game\IState.cs" />
+    <Compile Include="HelperClass\Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game\Program.cs" />
     <Compile Include="Game\PyramidPanic.cs" />
