--- a/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -112,6 +112,7 @@
     <Compile Include="GameScenes\HelpScene\HelpScene.cs" />
     <Compile Include="GameScenes\PlayScene\PlayScene.cs" />
     <Compile Include="GameScenes\StartScene\Input\Input.cs" />
+    <Compile Include="GameScenes\StartScene\Menu.cs" />
     <Compile Include="Game\IState.cs" />
     <Compile Include="HelperClass\Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
