--- a/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -113,6 +113,7 @@
     <Compile Include="GameScenes\PlayScene\PlayScene.cs" />
     <Compile Include="GameScenes\StartScene\Input\Input.cs" />
     <Compile Include="GameScenes\StartScene\Menu.cs" />
+    <Compile Include="GameScenes\TestScene\TestScene.cs" />
     <Compile Include="Game\IState.cs" />
     <Compile Include="HelperClass\Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
